fixes for terraform/ansible

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ dist/
 .vscode/
 sandbox/
 .github/
+deploy/terraform/.terraform
+deploy/terraform/.terraform.lock.hcl
+deploy/terraform/terraform.tfstate
